Refazendo referência de links

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
 <body>
     <header class="header">
-        <img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
+        <a href="./index.html"><img src="./images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         <div class="header-links" id="header-links">
             <ul class="header-options">
                 <div class="header-list">
-                    <li><a class="header-link" href="./index.html">Home</a></li>
                     <li><a class="header-link" href="#">Novidades</a></li>
                     <li><a class="header-link" href="#">Promoções</a></li>
                     <li><a class="header-link" href="#">Contato</a></li>
