--- a/pages/home/vendedor.html
+++ b/pages/home/vendedor.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matiz Verdejante - Deixando o Mundo Mais Verde</title>
-    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../style/main.css">
-    <link rel="stylesheet" href="../style/desktop/_home.css">
-    <link rel="stylesheet" href="../style/tablet/_home.css">
-    <link rel="stylesheet" href="../style/mobile/_home.css">
+    <link rel="stylesheet" href="../../style/main.css">
+    <link rel="stylesheet" href="../../style/desktop/_home.css">
+    <link rel="stylesheet" href="../../style/tablet/_home.css">
+    <link rel="stylesheet" href="../../style/mobile/_home.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
@@ -18,16 +18,15 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="../style/rating_style.css">
+    <link rel="stylesheet" href="../../style/rating_style.css">
 </head>
 
 <body>
     <header class="header">
-        <img src="../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante">
+        <a href="./vendedor.html"><img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         <div class="header-links" id="header-links">
             <ul class="header-options">
                 <div class="header-list">
-                    <li><a class="header-link" href="./index.html">Home</a></li>
                     <li><a class="header-link" href="#">Novidades</a></li>
                     <li><a class="header-link" href="#">Promoções</a></li>
                     <li><a class="header-link" href="#">Contato</a></li>
@@ -39,8 +38,8 @@
                     <a href="#">
                         <span class="material-symbols-outlined" id="icon-link">shopping_cart</span>
                     </a>
-                    <a href="./login.html">
-                        <img class="header-icon" src="../images/icon-login.png" alt="Login">
+                    <a href="../login.html">
+                        <img class="header-icon" src="../../images/icon-login.png" alt="Login">
                     </a>
                     <span class="material-symbols-outlined" id="btn-close">close</span>
                 </div>
@@ -51,43 +50,43 @@
 
     <div class="carrosselECategorias">
         <div class="carrossel">
-            <img src="../images/carrossel-home/image1.png" alt="Imagem carrossel">
-            <img src="../images/carrossel-home/image2.png" alt="Imagem carrossel">
-            <img src="../images/carrossel-home/image3.png" alt="Imagem carrossel">
-            <img src="../images/carrossel-home/image4.png" alt="Imagem carrossel">
-            <img src="../images/carrossel-home/image5.png" alt="Imagem carrossel">
-            <img src="../images/carrossel-home/image6.png" alt="Imagem carrossel">
+            <img src="../../images/carrossel-home/image1.png" alt="Imagem carrossel">
+            <img src="../../images/carrossel-home/image2.png" alt="Imagem carrossel">
+            <img src="../../images/carrossel-home/image3.png" alt="Imagem carrossel">
+            <img src="../../images/carrossel-home/image4.png" alt="Imagem carrossel">
+            <img src="../../images/carrossel-home/image5.png" alt="Imagem carrossel">
+            <img src="../../images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
         <section class="container categorias">
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
                     <a href="./pages/rosto.html"> 
-                        <img class="categoria-img" src="../images/icons-categoria/rosto.png" alt="Rosto">
+                        <img class="categoria-img" src="../../images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
                     <a href="#">
-                        <img class="categoria-img" src="../images/icons-categoria/corpo.png" alt="Corpo">
+                        <img class="categoria-img" src="../../images/icons-categoria/corpo.png" alt="Corpo">
                         <h3 class="categoria-link">Corpo</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
                     <a href="#">
-                        <img class="categoria-img" src="../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
+                        <img class="categoria-img" src="../../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
                         <h3 class="categoria-link">Feminino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
                     <a href="#">
-                        <img class="categoria-img" src="../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
+                        <img class="categoria-img" src="../../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
                         <h3 class="categoria-link">Masculino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
                     <a href="#">
-                        <img class="categoria-img" src="../images/icons-categoria/barba.png" alt="Barba">
+                        <img class="categoria-img" src="../../images/icons-categoria/barba.png" alt="Barba">
                         <h3 class="categoria-link">Barba</h3>
                     </a>
                 </li>
@@ -102,15 +101,22 @@
         <p class="text" data-aos="fade-up" data-aos-duration="750">Oferecemos uma ampla gama de produtos para cuidados com a pele, cabelo e corpo. Desde cremes hidratantes e máscaras faciais até shampoos e condicionadores, nossos cosméticos são desenvolvidos com base em pesquisas científicas e ingredientes de origem sustentável.</p>
     </section>
 
+    <section class="container">
+        <h2 class="title">O que esperamos de você</h2>
+        <p class="text" data-aos="fade-up" data-aos-duration="250">Esperamos que o vendedor de cosméticos bioagradáveis seja uma pessoa comprometida com a saúde e o bem-estar do cliente, além de ter um conhecimento sólido sobre os produtos que está vendendo. É importante que o vendedor esteja disposto a educar e informar os clientes sobre os benefícios dos cosméticos bioagradáveis, bem como sobre os ingredientes utilizados nos produtos.</p>
+        <p class="text" data-aos="fade-up" data-aos-duration="500">Além disso, esperamos que o vendedor seja um profissional ético e responsável, que não faça promessas exageradas ou enganosas sobre os produtos e que respeite as leis e regulamentos aplicáveis à venda de cosméticos.</p>
+        <p class="text" data-aos="fade-up" data-aos-duration="750">Por fim, é esperado que o vendedor de cosméticos bioagradáveis tenha uma postura proativa e empreendedora, buscando sempre novas oportunidades de negócio e formas de expandir sua base de clientes. Com essas qualidades, o vendedor poderá contribuir para o sucesso do seu site e para a promoção de um estilo de vida mais saudável e sustentável.</p>
+    </section>
+
     <section class="footer">
-        <img class="footer-logo" src="../images/logo.png" alt="Logo">
+        <img class="footer-logo" src="../../images/logo.png" alt="Logo">
         <p>2023 &copy Desenvolvido por Grupo 6 | Projeto Interdiciplinar</p>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/rating.js"></script>
+    <script src="../../js/home.js"></script>
+    <script src="../../js/rating.js"></script>
 </body>
 </html>
