--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header header-secundary">
         <a href="../index.html">
-            <a class="material-symbols-outlined button-back" href="../index.html">arrow_back_ios</a>
+            <span class="material-symbols-outlined button-back">arrow_back_ios</span>
         </a>
     </div>
     <form class="form">
