--- a/pages/cadastro/cliente.html
+++ b/pages/cadastro/cliente.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Cliente</title>
-    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../style/main.css">
-    <link rel="stylesheet" href="../style/desktop/_cadastro.css">
-    <link rel="stylesheet" href="../style/tablet/_cadastro.css">
-    <link rel="stylesheet" href="../style/mobile/_cadastro.css">
+    <link rel="stylesheet" href="../../style/main.css">
+    <link rel="stylesheet" href="../../style/desktop/_cadastro.css">
+    <link rel="stylesheet" href="../../style/tablet/_cadastro.css">
+    <link rel="stylesheet" href="../../style/mobile/_cadastro.css">
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div id="bodyCadastro">
         <div class="header header-secundary">
-            <a href="./login.html">
-                <a class="material-symbols-outlined button-back" href="./login.html">arrow_back_ios</a>
+            <a href="../login.html">
+                <span class="material-symbols-outlined button-back">arrow_back_ios</span>
             </a>
         </div>
         <form class="form" id="formCliente">
@@ -66,8 +66,8 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="../js/plugins-jquery/jquery.mask.min.js"></script>
-<script src="../js/cadastro/index.js"></script>
-<script src="../js/cadastro/cliente.js"></script>
+<script src="../../js/plugins-jquery/jquery.mask.min.js"></script>
+<script src="../../js/cadastro/index.js"></script>
+<script src="../../js/cadastro/cliente.js"></script>
 </html>
 
