Add novas páginas

--- a/pages/Vendedor/home.html
+++ b/pages/Vendedor/home.html
@@ -27,16 +27,16 @@
         <div class="header-links" id="header-links">
             <ul class="header-options">
                 <div class="header-list">
-                    <li><a class="header-link" href="#">Novidades</a></li>
-                    <li><a class="header-link" href="#">Promoções</a></li>
+                    <li><a class="header-link" href="#">Seus produtos</a></li>
+                    <li><a class="header-link" href="#">Análise de vendas</a></li>
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
                 <div class="header-menu">
-                    <a href="#">
+                    <a href="./novoProduto.html">
                         <span class="material-symbols-outlined" id="icon-link">add_circle</span>
                     </a>
                     <a href="#">
-                        <span class="material-symbols-outlined" id="icon-link">shopping_cart</span>
+                        <span class="material-symbols-outlined" id="icon-link">mail</span>
                     </a>
                     <a href="../login.html">
                         <img class="header-icon" src="../../images/icon-login.png" alt="Login">
@@ -57,41 +57,6 @@
             <img src="../../images/carrossel-home/image5.png" alt="Imagem carrossel">
             <img src="../../images/carrossel-home/image6.png" alt="Imagem carrossel">
         </div>
-        <section class="container categorias">
-            <h2 class="title title-categorias">Busque por categorias</h2>
-            <ul class="categoria-list">
-                <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
-                    <a href="./pages/rosto.html"> 
-                        <img class="categoria-img" src="../../images/icons-categoria/rosto.png" alt="Rosto">
-                        <h3 class="categoria-link">Rosto</h3>
-                    </a>
-                </li>
-                <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
-                    <a href="#">
-                        <img class="categoria-img" src="../../images/icons-categoria/corpo.png" alt="Corpo">
-                        <h3 class="categoria-link">Corpo</h3>
-                    </a>
-                </li>
-                <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
-                    <a href="#">
-                        <img class="categoria-img" src="../../images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
-                        <h3 class="categoria-link">Feminino</h3>
-                    </a>
-                </li>
-                <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
-                    <a href="#">
-                        <img class="categoria-img" src="../../images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
-                        <h3 class="categoria-link">Masculino</h3>
-                    </a>
-                </li>
-                <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
-                    <a href="#">
-                        <img class="categoria-img" src="../../images/icons-categoria/barba.png" alt="Barba">
-                        <h3 class="categoria-link">Barba</h3>
-                    </a>
-                </li>
-            </ul>
-        </section>
     </div>
 
     <section class="container">
