Reajustando endereço de links

--- a/pages/Vendedor/home.html
+++ b/pages/Vendedor/home.html
@@ -23,7 +23,7 @@
 
 <body>
     <header class="header">
-        <a href="./vendedor.html"><img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
+        <a href="./home.html"><img src="../../images/logo.png" class="logo-header" alt="Logo Matiz Verdejante"></a>
         <div class="header-links" id="header-links">
             <ul class="header-options">
                 <div class="header-list">
