Add página de produtos

--- a/pages/Cliente/home.html
+++ b/pages/Cliente/home.html
@@ -32,10 +32,13 @@
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
                 <div class="header-menu">
-                    <a href="#">
+                    <a href="#" title="Meu carrinho">
                         <span class="material-symbols-outlined" id="icon-link">shopping_cart</span>
                     </a>
-                    <a href="../login.html">
+                    <a href="#" title="Localizar meus pedidos">
+                        <span class="material-symbols-outlined" id="icon-link">pin_drop</span>
+                    </a>
+                    <a href="../login.html" title="Cliente: admin">
                         <img class="header-icon" src="../../images/icon-login.png" alt="Login">
                     </a>
                     <span class="material-symbols-outlined" id="btn-close">close</span>
