--- a/pages/Vendedor/home.html
+++ b/pages/Vendedor/home.html
@@ -32,13 +32,13 @@
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
                 <div class="header-menu">
-                    <a href="./novoProduto.html">
+                    <a href="./novoProduto.html" title="Adicionar novo produto">
                         <span class="material-symbols-outlined" id="icon-link">add_circle</span>
                     </a>
-                    <a href="#">
+                    <a href="#" title="Mensagens recebidas">
                         <span class="material-symbols-outlined" id="icon-link">mail</span>
                     </a>
-                    <a href="../login.html">
+                    <a href="../login.html" title="Vendedor: admin">
                         <img class="header-icon" src="../../images/icon-login.png" alt="Login">
                     </a>
                     <span class="material-symbols-outlined" id="btn-close">close</span>
