--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a class="header-link" href="#">Contato</a></li>
                 </div>
                 <div class="header-menu">
-                    <a href="./pages/login.html">
+                    <a href="./pages/login.html" title="Login">
                         <img class="header-icon" src="./images/icon-login.png" alt="Login">
                     </a>
                     <span class="material-symbols-outlined" id="btn-close">close</span>
@@ -55,31 +55,31 @@
             <h2 class="title title-categorias">Busque por categorias</h2>
             <ul class="categoria-list">
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="250">
-                    <a href="./pages/rosto.html"> 
+                    <a href="./pages/produtos.html"> 
                         <img class="categoria-img" src="./images/icons-categoria/rosto.png" alt="Rosto">
                         <h3 class="categoria-link">Rosto</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="500">
-                    <a href="#">
+                    <a href="./pages/produtos.html">
                         <img class="categoria-img" src="./images/icons-categoria/corpo.png" alt="Corpo">
                         <h3 class="categoria-link">Corpo</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="750">
-                    <a href="#">
+                    <a href="./pages/produtos.html">
                         <img class="categoria-img" src="./images/icons-categoria/cabelo-fem.png" alt="Cabelo Feminino">
                         <h3 class="categoria-link">Feminino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1000">
-                    <a href="#">
+                    <a href="./pages/produtos.html">
                         <img class="categoria-img" src="./images/icons-categoria/cabelo-masc.png" alt="Cabelo Masculino">
                         <h3 class="categoria-link">Masculino</h3>
                     </a>
                 </li>
                 <li class="categoria-item" data-aos="fade-up" data-aos-duration="1250">
-                    <a href="#">
+                    <a href="./pages/produtos.html">
                         <img class="categoria-img" src="./images/icons-categoria/barba.png" alt="Barba">
                         <h3 class="categoria-link">Barba</h3>
                     </a>
