--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - Cliente</title>
+    <title>Cadastro</title>
     <link rel="shortcut icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../style/main.css">
@@ -16,7 +16,7 @@
 <body>
     <div id="bodyCadastro">
         <div class="header header-secundary">
-            <a href="../login.html">
+            <a href="./login.html">
                 <span class="material-symbols-outlined button-back">arrow_back_ios</span>
             </a>
         </div>
@@ -66,8 +66,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="../../js/plugins-jquery/jquery.mask.min.js"></script>
-<script src="../../js/cadastro/index.js"></script>
-<script src="../../js/cadastro/cliente.js"></script>
+<script src="../js/plugins-jquery/jquery.mask.min.js"></script>
+<script src="../js/cadastro.js"></script>
 </html>
 
