--- a/pages/novoProduto.html
+++ b/pages/novoProduto.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header header-secundary">
-        <a href="./home.html">
+        <a href="./homeUsers.html">
             <span class="material-symbols-outlined button-back">arrow_back_ios</span>
         </a>
         <h2 class="title-aba">Cadastro de novo produto</h2>
