--- a/pages/homeUsers.html
+++ b/pages/homeUsers.html
@@ -155,13 +155,17 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Condicionador intra cura</h4>
                     <p class="destaque-text">Experimente a sensação de ter cabelos mais saudáveis, brilhantes, radiantes e fortalecidos a cada lavagem. </p>
-                        <div class="rating">
-                        <span class="star" data-rating="1">&#9733;</span>
-                        <span class="star" data-rating="2">&#9733;</span>
-                        <span class="star" data-rating="3">&#9733;</span>
-                        <span class="star" data-rating="4">&#9733;</span>
-                        <span class="star" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating">0</span> estrelas</p>
+                    <div class="rating">
+                        <input value="5" name="rate" id="star5" type="radio">
+                        <label title="text" for="star5"></label>
+                        <input value="4" name="rate" id="star4" type="radio">
+                        <label title="text" for="star4"></label>
+                        <input value="3" name="rate" id="star3" type="radio" checked="">
+                        <label title="text" for="star3"></label>
+                        <input value="2" name="rate" id="star2" type="radio">
+                        <label title="text" for="star2"></label>
+                        <input value="1" name="rate" id="star1" type="radio">
+                        <label title="text" for="star1"></label>
                     </div>
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
@@ -174,13 +178,18 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Creme Matiz Cereja</h4>
                     <p class="destaque-text">Desfrute de toda a deliciosa fragrância e sabor fresco da cereja, com um toque especial de cuidado que você merece.</p>
-                        <div class="rating1">
-                        <span class="star1" data-rating="1">&#9733;</span>
-                        <span class="star1" data-rating="2">&#9733;</span>
-                        <span class="star1" data-rating="3">&#9733;</span>
-                        <span class="star1" data-rating="4">&#9733;</span>
-                        <span class="star1" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating1">0</span> estrelas</p>
+                    <div class="rating">
+                        <input value="5" name="rate" id="star5" type="radio">
+                        <label title="text" for="star5"></label>
+                        <input value="4" name="rate" id="star4" type="radio">
+                        <label title="text" for="star4"></label>
+                        <input value="3" name="rate" id="star3" type="radio" checked="">
+                        <label title="text" for="star3"></label>
+                        <input value="2" name="rate" id="star2" type="radio">
+                        <label title="text" for="star2"></label>
+                        <input value="1" name="rate" id="star1" type="radio">
+                        <label title="text" for="star1"></label>
+                    </div>
                     </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
@@ -193,13 +202,17 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Oléo essencial</h4>
                     <p class="destaque-text">A essência pura da natureza em cada gota. Sinta a verdadeira essência para o seu dia a dia.</p>
-                    <div class="rating2">
-                        <span class="star2" data-rating="1">&#9733;</span>
-                        <span class="star2" data-rating="2">&#9733;</span>
-                        <span class="star2" data-rating="3">&#9733;</span>
-                        <span class="star2" data-rating="4">&#9733;</span>
-                        <span class="star2" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating2">0</span> estrelas</p>
+                    <div class="rating">
+                        <input value="5" name="rate" id="star5" type="radio">
+                        <label title="text" for="star5"></label>
+                        <input value="4" name="rate" id="star4" type="radio">
+                        <label title="text" for="star4"></label>
+                        <input value="3" name="rate" id="star3" type="radio" checked="">
+                        <label title="text" for="star3"></label>
+                        <input value="2" name="rate" id="star2" type="radio">
+                        <label title="text" for="star2"></label>
+                        <input value="1" name="rate" id="star1" type="radio">
+                        <label title="text" for="star1"></label>
                     </div>
                     <div class="destaque-comprar">
                         <p>R$24.99</p>
@@ -212,13 +225,17 @@
                 <div class="destaque-descricao">
                     <h4 class="destaque-title">Shampoo intra cura</h4>
                     <p class="destaque-text">Cuide da sua beleza capilar com o Shampoo Intra Cura e experimente a transformação que você merece.</p>
-                        <div class="rating3">
-                        <span class="star3" data-rating="1">&#9733;</span>
-                        <span class="star3" data-rating="2">&#9733;</span>
-                        <span class="star3" data-rating="3">&#9733;</span>
-                        <span class="star3" data-rating="4">&#9733;</span>
-                        <span class="star3" data-rating="5">&#9733;</span>
-                        <p class="destaque-text"><span id="rating3">0</span> estrelas</p>
+                    <div class="rating">
+                        <input value="5" name="rate" id="star5" type="radio">
+                        <label title="text" for="star5"></label>
+                        <input value="4" name="rate" id="star4" type="radio">
+                        <label title="text" for="star4"></label>
+                        <input value="3" name="rate" id="star3" type="radio" checked="">
+                        <label title="text" for="star3"></label>
+                        <input value="2" name="rate" id="star2" type="radio">
+                        <label title="text" for="star2"></label>
+                        <input value="1" name="rate" id="star1" type="radio">
+                        <label title="text" for="star1"></label>
                     </div>
                     <div class="destaque-comprar">
                         <p>R$19.99</p>
@@ -246,6 +263,5 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../js/home.js"></script>
     <script src="../js/homeUsers.js"></script>
-    <script src="../js/rating.js"></script>
 </body>
 </html>
