--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -6,9 +6,12 @@
     <title>Produtos</title>
     <link rel="shortcut icon" href="../images/logo.png">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 
+    <link rel="stylesheet" href="../style/rating_style.css">
     <link rel="stylesheet" href="../style/desktop/_produtos.css">
     <link rel="stylesheet" href="../style/main.css">
 </head>
@@ -33,8 +36,11 @@
         <span class="material-symbols-outlined" id="menu-hamburguer">menu</span>
     </header>
     <main class="produtos container">
-        <button>Filtro</button>
-        <section class="filtro">
+        <button id="btn-filtro">
+            <span class="material-symbols-outlined">tune</span>
+            <p>Filtro</p>
+        </button>
+        <section class="filtro" id="filtro">
             <form class="filtro-form">
                 <label class="label" for="marcas">Marcas:</label>
                 <select class="input" id="marcas">
@@ -50,7 +56,8 @@
                     <option value="">Marca 10</option>
                 </select>
                 <label class="label" for="valor">Preço:</label>
-                <input class="input" type="range" min="5" max="100" step="5">
+                <input class="input" type="number" id="valor" placeholder="Mínimo">
+                <input class="input" type="number" id="valor" placeholder="Máximo">
                 <label class="label" for="categorias">Categorias:</label>
                 <div>
                     <div>
@@ -78,71 +85,218 @@
                         <label class="label" for="barba">Barba</label>
                     </div>
                 </div>
-                <button class="button button-secundario" >Aplicar</button>
+                <button class="button button-secundario">Aplicar</button>
             </form>
         </section>
         <section>
             <div class="produtos-categoria">
                 <h2 class="title">Rosto</h2>
                 <div class="list-produtos">
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
                         </div>
                     </div>
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
                         </div>
                     </div>
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
                         </div>
                     </div>
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
                         </div>
                     </div>
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
                         </div>
                     </div>
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
                         </div>
                     </div>
-                    <div class="produtos">
-                        <img src="https://via.placeholder.com/250x200.png" alt="">
-                        <h4>lorem</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque officiis facere autem rerum velit fuga voluptate ab laborum iure assumenda dicta quod, ex minus consectetur ipsa, quaerat, culpa laboriosam atque.</p>
+                    <div class="produtos-item">
+                        <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
+                        <h4 class="produtos-title">lorem</h4>
+                        <div>
+                            <label class="btn-favorite">
+                                <input checked="checked" type="checkbox">
+                                <div class="checkmark">
+                                    <svg viewBox="0 0 256 256">
+                                    <rect fill="none" height="256" width="256"></rect>
+                                    <path d="M224.6,51.9a59.5,59.5,0,0,0-43-19.9,60.5,60.5,0,0,0-44,17.6L128,59.1l-7.5-7.4C97.2,28.3,59.2,26.3,35.9,47.4a59.9,59.9,0,0,0-2.3,87l83.1,83.1a15.9,15.9,0,0,0,22.6,0l81-81C243.7,113.2,245.6,75.2,224.6,51.9Z" stroke-width="20px" stroke="#FFF" fill="none"></path></svg>
+                                </div>
+                            </label>
+                            <div class="rating">
+                                <input value="5" id="star5" type="checkbox">
+                                <label for="star5"></label>
+                                <input value="4" id="star4" type="checkbox">
+                                <label for="star4"></label>
+                                <input value="3" id="star3" type="checkbox">
+                                <label for="star3"></label>
+                                <input value="2" id="star2" type="checkbox">
+                                <label for="star2"></label>
+                                <input value="1" id="star1" type="checkbox">
+                                <label for="star1"></label>
+                            </div>
+                        </div>
                         <div>
                             <p>R$ --,--</p>
                             <button>Comprar</button>
