Atualizando campo de produtos

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -95,7 +95,7 @@
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -117,15 +117,15 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -147,15 +147,15 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -177,15 +177,15 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -207,15 +207,15 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -237,15 +237,15 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -267,15 +267,15 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                     <div class="produtos-item">
                         <img class="produtos-img" src="https://via.placeholder.com/250x200.png" alt="">
                         <h4 class="produtos-title">lorem</h4>
-                        <div>
+                        <div class="produtos-opniao">
                             <label class="btn-favorite">
                                 <input checked="checked" type="checkbox">
                                 <div class="checkmark">
@@ -297,9 +297,9 @@
                                 <label for="star1"></label>
                             </div>
                         </div>
-                        <div>
-                            <p>R$ --,--</p>
-                            <button>Comprar</button>
+                        <div class="produtos-buy">
+                            <p class="produtos-preco">R$ --,--</p>
+                            <button onclick="estaLogado()" class="button button-principal">Comprar</button>
                         </div>
                     </div>
                 </div>
