--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -308,6 +308,7 @@
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="../js/home.js"></script>
     <script src="../js/produtos.js"></script>
 </body>
 </html>
