--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header header-secundary">
-        <a href="../index.html">
+        <a onclick="voltarTelaAnterior()" id="btn-voltar">
             <span class="material-symbols-outlined button-back">arrow_back_ios</span>
         </a>
     </div>
