--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -141,7 +141,7 @@
             </form>
         </section>
         <section>
-            <div class="produtos-categoria">
+            <div class="produtos-categoria" id="rosto">
                 <h2 class="title">Rosto</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -356,7 +356,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria">
+            <div class="produtos-categoria" id="corpo">
                 <h2 class="title">Corpo</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -571,7 +571,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria">
+            <div class="produtos-categoria" id="cabelo-fem">
                 <h2 class="title">Cabelo Feminino</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -786,7 +786,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria">
+            <div class="produtos-categoria" id="cabelo-mas">
                 <h2 class="title">Cabelo masculino</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
@@ -1001,7 +1001,7 @@
                     </div>
                 </div>
             </div>
-            <div class="produtos-categoria">
+            <div class="produtos-categoria" id="barba">
                 <h2 class="title">Barba</h2>
                 <div class="list-produtos">
                     <div class="produtos-item">
